--- a/stats.html
+++ b/stats.html
@@ -54,8 +54,8 @@
           <i data-lucide="shield" class="h-5 w-5 text-emerald-700"></i>
         </div>
         <div class="leading-tight">
-          <div class="text-slate-900 font-black">Guilda HUB</div>
-          <div class="text-xs text-slate-500">Eventos • Camps • Stats</div>
+          <div class="text-slate-900 font-black">Guilda • HUB</div>
+          <div class="text-xs text-slate-500">Estatísticas￼</div>
         </div>
       </div>
       <button id="sidebar-close" class="h-10 w-10 grid place-items-center rounded-xl hover:bg-slate-100">
@@ -94,8 +94,8 @@
           <i data-lucide="menu" class="h-5 w-5"></i>
         </button>
         <div class="leading-tight">
-          <div class="font-black text-slate-900">Guilda HUB</div>
-          <div class="text-xs text-slate-500">Eventos • Camps • Stats</div>
+          <div class="font-black text-slate-900">Guilda • HUB</div>
+          <div class="text-xs text-slate-500"> Estatísticas￼</div>
         </div>
       </div>
       <a href="index.html" class="text-sm font-semibold text-emerald-700 hover:text-emerald-800">Voltar</a>
@@ -104,7 +104,7 @@
 <section class="space-y-4">
   <div class="rounded-3xl bg-white ring-1 ring-slate-200 p-4">
     <div class="text-sm font-bold">Buscar meu perfil</div>
-    <p class="mt-1 text-xs text-slate-500">Digite seu nick ou ID. Não mostramos WhatsApp aqui por segurança.</p>
+    <p class="mt-1 text-xs text-slate-500">Digite seu nick ou ID para ver suas estatísticas basica.</p>
     <div class="mt-4 flex flex-col gap-3 sm:flex-row">
       <input id="query" type="text" placeholder="Seu nick ou ID"
         class="flex-1 rounded-2xl bg-white ring-1 ring-slate-200 px-4 py-3 text-sm outline-none focus:ring-emerald-400/40" />
@@ -264,7 +264,7 @@ function renderMember(res) {
     </div>
 
     <div class="mt-4 text-xs text-slate-500">
-      Observação: WhatsApp não aparece aqui por segurança.
+      Observação: O nick que aparece aqui é o nick que o seu lider da guilda cadastrou em nossa plataforma.
     </div>
   `);
 
